Removed binary files

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,8 @@
 *.VC.db
 *.VC.opendb
 
+Config/HoloLens/*
+
 # Precompiled Assets
 SourceArt/**/*.png
 SourceArt/**/*.tga
@@ -48,6 +50,7 @@ SourceArt/**/*.tga
 # Binary Files
 Binaries/*
 Plugins/*/Binaries/*
+Plugins/*/*/Binaries/*
 
 # Builds
 Build/*
@@ -69,6 +72,7 @@ Saved/*
 # Compiled source files for the engine to use
 Intermediate/*
 Plugins/*/Intermediate/*
+Plugins/*/*/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
