Added RPM avatars to the project

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -217,4 +217,6 @@ VoiceChatVolumeControlBus=/Game/Audio/Modulation/ControlBuses/CB_VoiceChat.CB_Vo
 +LDRAudioSubmixEffectChain=(Submix="/Game/Audio/Submixes/MainSubmix.MainSubmix",SubmixEffectChain=("/Game/Audio/DYN_LowMultibandDynamics.DYN_LowMultibandDynamics","/Game/Audio/Effects/SubmixEffects/DYN_LowDynamics.DYN_LowDynamics"))
 LoadingScreenControlBusMix=/Game/Audio/Modulation/ControlBusMixes/CBM_LoadingScreenMix.CBM_LoadingScreenMix
 
+[/Script/ReadyPlayerMe.ReadyPlayerMeSettings]
+bEnableAvatarCaching=True
 
