Added glTFRuntime into the cooking directory settings

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -80,7 +80,7 @@ Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
 BuildTarget=LyraGame
 LaunchOnTarget=
-StagingDirectory=(Path="")
+StagingDirectory=(Path="C:/Users/gevor/Desktop/New folder")
 FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
@@ -176,11 +176,13 @@ bSkipMovies=False
 -IniSectionBlacklist=HordeStorageServers
 +IniSectionBlacklist=HordeStorageServers
 +MapsToCook=(FilePath="/Game/System/FrontEnd/Maps/L_LyraFrontEnd")
++DirectoriesToAlwaysCook=(Path="/ReadyPlayerMe")
++DirectoriesToAlwaysCook=(Path="/glTFRuntime")
 +DirectoriesToAlwaysStageAsUFS=(Path="../Restricted/NotForLicensees/Config/Custom")
 +DirectoriesToAlwaysStageAsNonUFS=(Path="Legal")
 +DirectoriesToAlwaysStageAsNonUFS=(Path="UI/Foundation/Fonts/Orbitron/Raw")
 PerPlatformBuildConfig=()
-PerPlatformTargetFlavorName=()
+PerPlatformTargetFlavorName=(("Android", "Android_ASTC"))
 PerPlatformBuildTarget=()
 
 [Staging]
