Added company name to the project settings

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,6 +2,10 @@
 ProjectID=9574C500432905E729CD49A76482E9EA
 Description=Sample starter game for Unreal Engine 5
 ProjectName=Lyra
+CompanyName=ReadyPlayerMe
+CompanyDistinguishedName=CN=ReadyPlayerMe
+SupportContact=support@readyplayer.me
+Homepage="https://readyplayer.me/"
 
 [/Script/LyraGame.LyraPlayerController]
 InputYawScale=1.0
