--- a/LyraRpmExample.uproject
+++ b/LyraRpmExample.uproject
@@ -285,6 +285,11 @@
 		{
 			"Name": "TopDownArena",
 			"Enabled": true
+		},
+		{
+			"Name": "glTFRuntime",
+			"Enabled": true,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/d2ed3709933d4608a3a8dd746cbc045d"
 		}
 	],
 	"EpicSampleNameHash": "451731683"
