--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,9 @@
 [submodule "Plugins/glTFRuntime"]
 	path = Plugins/glTFRuntime
 	url = https://github.com/rdeioris/glTFRuntime.git
-[submodule "glTFRuntime"]
-	path = Plugins/glTFRuntime
-	url = https://github.com/rdeioris/glTFRuntime.git
-[submodule "ReadyPlayerMe"]
+[submodule "Plugins/ReadyPlayerMe"]
 	path = Plugins/ReadyPlayerMe
 	url = https://github.com/readyplayerme/rpm-unreal-sdk.git
-[submodule "RpmAvatarCreator"]
+[submodule "Plugins/RpmAvatarCreator"]
 	path = Plugins/RpmAvatarCreator
 	url = https://github.com/readyplayerme/rpm-unreal-avatar-creator.git
