feat: Added AvatarCreator scene
- Changed the AvatarSelection screen to open the avatar creator scene
- Added the AvatarCreator plugin to the project

--- a/LyraRpmExample.uproject
+++ b/LyraRpmExample.uproject
@@ -290,6 +290,10 @@
 			"Name": "glTFRuntime",
 			"Enabled": true,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/d2ed3709933d4608a3a8dd746cbc045d"
+		},
+		{
+			"Name": "RpmAvatarCreator",
+			"Enabled": true
 		}
 	],
 	"EpicSampleNameHash": "451731683"
