Added custom render actor for the custom avatar creator

--- a/Config/DefaultEditorPerProjectUserSettings.ini
+++ b/Config/DefaultEditorPerProjectUserSettings.ini
@@ -5,3 +5,8 @@
 GameGetsMouseControl=True
 RouteGamepadToSecondWindow=True
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=True,EmulationTarget=Server,CurrentProfile="Average",OutPackets=(MinLatency=30,MaxLatency=60,PacketLossPercentage=1),InPackets=(MinLatency=30,MaxLatency=60,PacketLossPercentage=1))
+
+[/Script/ReadyPlayerMeEditor.ReadyPlayerMeEditorSettings]
+bEnableAnalytics=True
+AnalyticsTarget=
+
