--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -224,5 +224,7 @@ VoiceChatVolumeControlBus=/Game/Audio/Modulation/ControlBuses/CB_VoiceChat.CB_Vo
 LoadingScreenControlBusMix=/Game/Audio/Modulation/ControlBusMixes/CBM_LoadingScreenMix.CBM_LoadingScreenMix
 
 [/Script/ReadyPlayerMe.ReadyPlayerMeSettings]
+AppId=64e5d9032f3d8a06908ab051
+Subdomain=unrealexamples
 bEnableAvatarCaching=True
 
