Updated Lyra project to the SDK version 2.1.0

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -230,4 +230,5 @@ DefaultReplicationGraphClass=/Script/LyraGame.LyraReplicationGraph
 AppId=650998491a64533b4e20f3ff
 Subdomain=lyraexample
 bEnableAvatarCaching=True
+AvatarCacheSettings=(bEnableAvatarCaching=True,bEnableAutomaticCacheCleaning=True,CachedAvatarLimit=20)
 
